--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.16"
+    "@heroicons/vue": "^2.0.16",
+    "ethers": "^6.1.0"
   }
 }
